rest api: breacking changes on /top and /dump URIs
